# manim-studio

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  branding.py  communicate.py  editor_widget.py  live_scene.py  main.py  package.json  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: python-package.yml
branding/: branding.py
client/: Manim Studio Client.spec  client.py  control_dialog.py  dialog.py  main.py
docs/: conf.py  getting-started.rst  getting_started.rst  index.rst  installation.rst
docs/_build/doctrees/: collaborative-work.doctree  contributing.doctree  environment.pickle  getting-started.doctree  getting_started.doctree  index.doctree  installation.doctree
examples/: button_example.py  caca.py  checkbox_widget_example.py  color_widget_example.py  data_science_example.py  data_science_plugin.py  dropdown_example.py  hello_world.py  line_edit_example.py  load_mobject_example.py  load_snippet_example.py  manim_studio_presentation.py  mathjax_mobject_example.py  slide.py  slider_example.py  text_edit_example.py
manim_studio/: __init__.py  __main__.py  api.py  mobject_picker.py  preview.py  syntax_highlighting.py  utils.py  window.py
manim_studio/input_widgets/: color_picker.py  range_slider.py
snippets/: banner_expand.mss  banner_uncreate.mss  circle_scene.mss  manim_banner.mss  plot_function.mss
src/manim_studio/: __init__.py  __main__.py  ai_widget.py  animation_picker.py  boolean_value_tracker.py  builtins.py  button.py  checkbox_widget.py  code_edit.py  color_widget.py  communicate.py  control_dialog.py  controls_widget.py  dropdown_widget.py  editor_widget.py  get_icon_file.py  import_from_file.py  inherits_dialog.py  int_value_tracker.py  line_editor_widget.py  list_of_mobjects.py  live_scene.py  load_mobject.py  load_snippet.py  main.py  mobject_picker.py  position_control.py  prerender_latex.py  preview_widget.py  render_thread.py  save_mobject.py  saving_and_loading_mobjects.py  slider.py  string_value_tracker.py  text_editor_widget.py
tests/: test_startup.py
(+58 files in other folders)
